# pictura

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs
src/image/: channel.rs  layer.rs  mod.rs  tests.rs
